data/derived/comb/progs/unify/prog5226.ml.out
Characters 458-479:
  removeZero (add (padZero l1 l2));;
             ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type (int * int) list
       but an expression was expected of type int list
       Type int * int is not compatible with type int 
